src/test/deca/context/valid/class/return/int_to_float.deca
// Description:
//    Déclaration d'une fonction int mais avec return float
//
// Resultats:
//    cannot cast float to int


class A {
	float a() {
		return 5;
	}
}

{
}

