src/test/deca/context/invalid/class/instance/int.deca
// Description:
//    Utilisation de instanceof sur un int
//
// Resultats:
//    cannot cast int to int

{
	int a;
	if(a instanceof int) {}
}

